added scroll animations

--- a/index.html
+++ b/index.html
@@ -30,7 +30,6 @@
           <button type="button" name="button" onclick="cssQuiz()"class="btn"id="css-nav">Css</button>
         </div>
         <br>
-        <button type="button" name="button" onClick="reset()" class="btn"  id="reset">Retake quiz</button>
         </div>
 
   </div>
@@ -177,8 +176,9 @@
                    </div>
                 </div>
             </div>
-      </div>
-      <button onClick="jsmarks()"type="button" name="button" class="btn" id="jsSubmit">Submit</button>
+      </div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+      <button onClick="jsmarks()"type="button" name="button" class="btn" id="jsSubmit">Submit</button> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+      <button type="button" name="button" onClick="reset()" class="btn"  id="reset">Retake quiz</button>
       <div id="jsresults">
 
       </div>
@@ -320,6 +320,8 @@
              </div>
        </div>
        <button  onClick="cssmarks()"type="button" name="button" class="btn" id="cssSubmit">Submit</button>
+       &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+       <button type="button" name="button" onClick="reset()" class="btn"  id="reset">Retake quiz</button>
        <div id="css-results">
        </div>
        </form>
@@ -461,6 +463,8 @@
            </div>
      </div>
      <button onClick="htmlmarks()"type="button" name="button" class="btn" id="htmlSubmit">Submit</button>
+     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+     <button type="button" name="button" onClick="reset()" class="btn"  id="reset">Retake quiz</button>
      <div id="html-results">
 
      </div>
