added loops to calculate the marks

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
               <li>Which of the following is a <strong>JavaScript</strong> output method</li>
                    <div class="radio">
                     <label>
-                      <input class="count" type="radio" name="j2" value="10">
+                      <input class="count" type="radio" name="js2" value="10">
                       alert ( );
                     </label>
                    </div>
