added google fonts links

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <script   src="https://code.jquery.com/jquery-3.3.1.min.js"   integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="   crossorigin="anonymous"></script>
     <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
     <link href="css/styles.css" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Abril+Fatface" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Playfair+Display+SC" rel="stylesheet">
   </head>
   <div class="sidebar">
        <div class="sidebar-items">
@@ -18,7 +20,7 @@
         <progress id="progressbar" value="0" max="100" ></progress>
         <br><br>
         <div class="ninja-practise">
-          <h4>Select your code Dojo</h4>
+          <h4>Click to view Dojo</h4>
         </div>
         <div class="quiz-buttons">
           <button type="button" name="button" onclick="javascriptQuiz()" class="btn" id="js-nav">JavaScript</button>
@@ -38,7 +40,7 @@
       <div class="jumbotron">
         <div class="heading1">
           <h1>Quiz Board</h1>
-          <h4 > Test your might Code Ninja</h4>
+          <h4 > Test your Might Code Ninja</h4>
         </div>
       </div>
       <!-- jumbotron wrap -->
