added scroll functions on retake buttons

--- a/index.html
+++ b/index.html
@@ -180,8 +180,8 @@
             </div>
       </div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
       <button onClick="jsmarks()"type="button" name="button" class="btn" id="jsSubmit">Submit</button> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-      <button type="button" name="button" onClick="reset()" class="btn"  id="reset">Retake quiz</button>
-      <div id="jsresults">
+      <button type="button" name="button" onClick="reset()" class="btn"  id="resetjs">Retake quiz</button>
+      <div id="js-results">
 
       </div>
       </form>
@@ -323,7 +323,7 @@
        </div>
        <button  onClick="cssmarks()"type="button" name="button" class="btn" id="cssSubmit">Submit</button>
        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-       <button type="button" name="button" onClick="reset()" class="btn"  id="reset">Retake quiz</button>
+       <button type="button" name="button" onClick="reset()" class="btn"  id="resetcss">Retake quiz</button>
        <div id="css-results">
        </div>
        </form>
@@ -466,7 +466,7 @@
      </div>
      <button onClick="htmlmarks()"type="button" name="button" class="btn" id="htmlSubmit">Submit</button>
      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-     <button type="button" name="button" onClick="reset()" class="btn"  id="reset">Retake quiz</button>
+     <button type="button" name="button" onClick="reset()" class="btn"  id="resethtml">Retake quiz</button>
      <div id="html-results">
 
      </div>
