created more js quiz questions

--- a/index.html
+++ b/index.html
@@ -50,19 +50,18 @@
         <div class="col-md-12">
           <div class="well">
             <ol>
-
-              <li>Which of the following is a <strong>JavaScript</strong> output method</li>
-                   <div class="radio">
-                    <label>
-                      <input class="count" type="radio" name="js1" value="10" required />
-                      alert ( );
-                    </label>
-                   </div>
+              <li >Which of the following is a <strong>JavaScript</strong> output method</li>
                     <div class="radio">
                       <label>
                         <input class="count" type="radio" name="js1" value="0">
                         find ( );
                       </label>
+                    </div>
+                    <div class="radio">
+                     <label>
+                       <input class="count" type="radio" name="js1" value="10" required />
+                       alert ( );
+                     </label>
                     </div>
                     <div class="radio">
                       <label>
@@ -76,104 +75,106 @@
                         Search ( );
                       </label>
                     </div>
-              <li>Which of the following is a <strong>JavaScript</strong> output method</li>
+              <li>Javascript is<strong>____</strong> language</li>
                    <div class="radio">
                     <label>
                       <input class="count" type="radio" name="js2" value="10">
-                      alert ( );
+                      Scripting
                     </label>
                    </div>
                     <div class="radio">
                       <label>
                         <input class="count" type="radio" name="js2" value="0">
-                        find ( );
+                        None of These
                       </label>
                     </div>
                     <div class="radio">
                       <label>
                         <input class="count" type="radio" name="js2" value="0">
-                        prompt ( );
+                        Programming
                       </label>
                     </div>
                     <div class="radio">
                       <label>
                         <input class="count" type="radio" name="js2" value="0">
-                        Search ( );
+                        Application
                       </label>
                     </div>
-              <li >Which of the following is a <strong>JavaScript</strong> output method</li>
+              <li >JavaScript is designed for following purpose</li>
+                    <div class="radio">
+                      <label>
+                        <input class="count" type="radio" name="js3" value="0">
+                        To Style HTML Pages
+                      </label>
+                    </div>
+                    <div class="radio">
+                     <label>
+                       <input class="count" type="radio" name="js3" value="10">
+                       To add interactivity to HTML Pages
+                     </label>
+                    </div>
+                    <div class="radio">
+                      <label>
+                        <input class="count" type="radio" name="js3" value="0">
+                        To Perform Server Side Scripting Opertion
+                      </label>
+                    </div>
+                    <div class="radio">
+                      <label>
+                        <input class="count" type="radio" name="js3" value="0">
+                        To Execute Query Related to DB on Server
+                      </label>
+                    </div>
+             <li> JavaScript is can be written</li>
+
+                   <div class="radio">
+                     <label>
+                       <input class="count" type="radio" name="js4" value="0">
+                    Directly into bootstrap
+                     </label>
+                   </div>
                    <div class="radio">
                     <label>
-                      <input class="count" type="radio" name="js3" value="10">
-                      alert ( );
+                      <input class="count" type="radio" name="js4" value="10">
+                   Directly into HTML pages
                     </label>
                    </div>
-                    <div class="radio">
-                      <label>
-                        <input class="count" type="radio" name="js3" value="0">
-                        find ( );
-                      </label>
-                    </div>
-                    <div class="radio">
-                      <label>
-                        <input class="count" type="radio" name="js3" value="0">
-                        prompt ( );
-                      </label>
-                    </div>
-                    <div class="radio">
-                      <label>
-                        <input class="count" type="radio" name="js3" value="0">
-                        Search ( );
-                      </label>
-                    </div>
-             <li >Which of the following is a <strong>JavaScript</strong> output method</li>
-                  <div class="radio">
-                   <label>
-                     <input class="count" type="radio" name="js4" value="10">
-                     alert ( );
-                   </label>
-                  </div>
                    <div class="radio">
                      <label>
                        <input class="count" type="radio" name="js4" value="0">
-                       find ( );
+                       directly on the Server Script
                      </label>
                    </div>
                    <div class="radio">
                      <label>
                        <input class="count" type="radio" name="js4" value="0">
-                       prompt ( );
+                       directly on the browser
+                     </label>
+                   </div>
+                   <li >JavaScript is an language. <strong>________ </strong> </li>
+
+                   <div class="radio">
+                     <label>
+                       <input class="count" type="radio" name="js5" value="0">
+                        Dialed
                      </label>
                    </div>
                    <div class="radio">
                      <label>
-                       <input class="count" type="radio" name="js4" value="0">
-                       Search ( );
+                       <input class="count" type="radio" name="js5" value="0">
+                        Compiled
                      </label>
                    </div>
-                   <li >Which of the following is not present in <strong>Javascript</strong> </li>
+                   <div class="radio">
+                     <label>
+                       <input class="count" type="radio" name="js5" value="0">
+                       Marked
+                     </label>
+                   </div>
                    <div class="radio">
                      <label>
                        <input class="count" type="radio" name="js5" value="10">
-                       append ( );
-                     </label>
-                   </div>
-                   <div class="radio">
-                     <label>
-                       <input class="count" type="radio" name="js5" value="0">
-                        before( );
-                     </label>
-                   </div>
-                   <div class="radio">
-                     <label>
-                       <input class="count" type="radio" name="js5" value="0">
-                        after ( );
-                     </label>
-                   </div>
-                   <div class="radio">
-                     <label>
-                       <input class="count" type="radio" name="js5" value="0">
-                       pretend ( );
+                       Interpreted
                      </label>
                    </div>
                 </div>
@@ -452,7 +453,7 @@
                   <div class="radio">
                     <label>
                       <input class="count2" type="radio" name="html5" value="0">
-                       after ( );  
+                       after ( );
                     </label>
                   </div>
                   <div class="radio">
@@ -467,7 +468,7 @@
      <button onClick="htmlmarks()"type="button" name="button" class="btn" id="htmlSubmit">Submit</button>
      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
      <button type="button" name="button" onClick="reset()" class="btn"  id="resethtml">Retake quiz</button>
-     <div id="html-results">
+     <div id="html-results" class="anim-typewriter" >
 
      </div>
      </form>
